--- a/content/resources/4-303f06-th.md
+++ b/content/resources/4-303f06-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/4-303-the-production-of-space-art-architecture-and-urbanism-in-dialogue-fall-2006/5e67255f9f1a7aeb0e0ede5015d6bb13_4-303f06-th.jpg
+file: /media/courses/4-303-the-production-of-space-art-architecture-and-urbanism-in-dialogue-fall-2006/5e67255f9f1a7aeb0e0ede5015d6bb13_4-303f06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An image from Group 4's midterm project, mapping people and their desires.
@@ -10,8 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Reach out and map someone.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 4-303f06-th.jpg
 uid: 5e67255f-9f1a-7aeb-0e0e-de5015d6bb13
 ---
+New image Upload
